openapi3 spec update, domain amount and tests, impl AddFunds handler
