# internal/handler/v1/deposit_into_wallet.go
@@ -1,10 +1,0 @@
-package v1
-
-import (
-	"net/http"
-
-	"github.com/google/uuid"
-)
-
-func (h *handler) DepositIntoWallet(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
-}
