# internal/handler/v1/reserve_funds.go
@@ -1,0 +1,10 @@
+package v1
+
+import (
+	"net/http"
+
+	"github.com/google/uuid"
+)
+
+func (h *handler) ReserveFunds(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
+}
