# internal/handler/v1/reserve_wallet_funds.go
@@ -1,10 +1,0 @@
-package v1
-
-import (
-	"net/http"
-
-	"github.com/google/uuid"
-)
-
-func (h *handler) ReserveWalletFunds(w http.ResponseWriter, r *http.Request, userId uuid.UUID) {
-}
